app/css/main.css
/*
#
#
# Population Projections 2.0
# Ben Southgate (bsouthga@gmail.com)
# 10/31/14
#
#
# General Styles
#
#
*/


/*---------------------------------------
  ---------------------------------------
    Body Styles
  ---------------------------------------
  --------------------------------------- */
html,body{
  height:100%;
  width: 100%;
  font-family: 'Lato';
  font-size:14px;
}

svg.helper-svg {
  position : absolute;
  top : 0px;
  left : 0px;
  height: 0px;
  width: 0px;
  padding: 0px;
  margin: 0px;
}

@media (max-width: 767px) {
  body {
    padding-left: 0;
    padding-right: 0;
  }
}

h1, h2, h3, h4, h6 {
  font-weight: normal;
}


h1.dropdown-section-header {
  margin-top: 20px;
}

h2 {
  font-size: 25px;
}

h5 {
  font-weight: bold;
}

p {
    font-size: 18px;
    line-height: 24px;
}

h1#title-header {
  width: 100%;
  text-align: center;
  font-size: 45px;
  font-weight: 300;
  margin-bottom: 40px;
  text-rendering: geometricPrecision;
}

h4#title-lead {
  margin-top: 20px;
  line-height: 26px;
  font-weight: bold;
  letter-spacing: -.25px;
}

.urban-footer {
  width: 100%;
  text-align: left;
  padding: 0;
  margin: 20px 0;
  float : none;
}

.urban-footer ul li {
    list-style-type: none;
}

div.shadow {
  -moz-box-shadow: 3px 3px 6px #777;
  -webkit-box-shadow: 3px 3px 6px #777;
  box-shadow: 3px 3px 6px #777;
  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#777777')";
  filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#777777');
}

.credit-title {
  margin-bottom: 0;
}

.credit-name {
  display: inline-block;
}

#credits {
  font-size: 12px;
}

#footer {
  background-color: #000;
  color: #fff;
  padding-bottom: 60px;
  padding-top: 20px;
}

#footer a {
  color : #fff;
}

.download-link {
  margin-bottom: 10px;
  text-decoration: underline;
}

#mobile-test {
  display: none;
  height: 0px;
  width: 0px;
}

@media(max-width: 768px) {
  #mobile-test {
    display: block;
  }
}

#feature-container {
  padding-bottom: 40px;
}



/*---------------------------------------
  --------------------------------------*/

/*---------------------------------------
  ---------------------------------------
    Bootstrap Affix Styles
  ---------------------------------------
  --------------------------------------- */

.affix#map-top {
  position: fixed;
  top: 66px;
  margin-top: 0;
  z-index: 11;
  background-color: rgba(255,255,255,0.95);
  padding: 0px;
  border-bottom: 8px solid black;
  width: 100%;
  box-sizing:content-box;
}

.affix #control-collapse {
  display: block;
  margin: 0 auto;
}


.affix .col-sm-12 {
  padding: 0px;
}

#control-collapse {
  display: block;
}

#control-collapse-toggle {
  display: block;
  text-align: center;
  height: 60px;
  line-height: 60px;
}

#control-collapse-toggle:hover {
  font-weight: bold;
  cursor: pointer;
}

#legend-header.extra-padding-top {
  margin-top: 80px;
}

#space-filler {
  width : 100%;
  display: block;
}

.settings-dropdown-icon {
  font-size: 20px;
  margin-right: 5px;
  display: inline-block;
}


/*---------------------------------------
  ---------------------------------------
    Nav override
  ---------------------------------------
  --------------------------------------- */
.navbar-header {
    float: none;
}
.navbar-left,.navbar-right {
    float: none !important;
}

.navbar-toggle {
  display: block;
  border-radius: 20px;
  margin-top: 10px;
  padding: 3px 7px;
  background-color: #fdbf11;
  color: #fff;
  cursor: pointer;
}
.navbar-toggle:active {
  background-color: #fdbf11;
}

#hidden-share {
  visibility: hidden;
  opacity: 0;
  display: inline-block;
  padding-bottom: 10px;
  margin-right: 5px;
  padding-right: 5px
  -webkit-transition: opacity .3s ease;
  -moz-transition: opacity .3s ease;
  -o-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

#hidden-share {
  color: inherit;
  text-decoration: none;
}

#share-container {
  display: inline-block;
  background-color: rgba(0,0,0,0);
}

#share-container:hover #hidden-share {
  visibility: visible;
  opacity: 1;
}

#social, #hidden-share span {
  display: inline-block;
  padding : 3px 6px;
  border-radius: 15px;
  margin-top: 11px;
  margin-right: 5px;
  position: relative;
  background-color: #0096D2;
  color : #fff;
}

#social {
  margin-right: 10px;
}

span#twitter {
  padding: 3px 7px;
  background-color: #55ACEE;
}

span#facebook {
  padding: 3px 9px;
  background-color: #3B5998;
}

span#mail {
  background-color: #999;
}

#hamburger-bun {
  position: absolute;
  display: inline-block;
  right: 0px;
  padding-right: 15px;
}

#hamburger-bun .navbar-toggle:hover,
#share-container span.nav-icon:hover {
  background-color: #777;
  cursor: pointer;
}

nav.navbar {
  height: 120px;
}

.navbar-collapse {
  border-top: 1px solid transparent;
  box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
}
.navbar-fixed-top {
  top: 0;
  border-width: 0 0 1px;
}
.navbar-collapse.collapse {
  display: none!important;
}
.navbar-nav {
  float: none!important;
  margin-top: 7.5px;
}
.navbar-nav>li {
    float: none;
}
.navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
}
.collapse.in{
  display:block !important;
}

.navbar-header {
  text-align: center;
}

#title-span {
  line-height: 120px;
  font-size: 25px;
  color : white;
  font-weight: bold;
}

#briefs {
  color : white;
  background-color: #333;
  position: absolute;
  width: 100%;
}

#hamburger-meat {
  padding-top : 20px;
  padding-bottom: 20px;
}

#hamburger-meat h1 {
  font-size: 20px;
}

.height-adjust {
  margin-top: 30px;
}

.logo-image {
  float: left;
  display: block;
  position: absolute;
  height: 100px;
  margin-top: 10px;
  margin-left: 20px;
}

#hamburger-meat a {
  display: block;
  padding: 5px 0px;
  cursor: pointer;
  color: white;
}

.mini-footer {
  position: absolute;
  display: block;
  top: 190px;
}

.settings-header {
  font-weight: regular;
  font-size: 20px;
}



/*---------------------------------------
  --------------------------------------*/

/*---------------------------------------
  ---------------------------------------
    Misc
  ---------------------------------------
  --------------------------------------- */

div.pyramid.col-xs-15,
div.pyramid.col-sm-15,
div.pyramid.col-md-15,
div.pyramid.col-lg-15 {
    position: relative;
    min-height: 1px;
    padding-right: 0px;
    padding-left: 0px;
}

div.pyramid.col-xs-15 {
    width: 20% !important;
    float: left;
}
@media (min-width: 768px) {
div.pyramid.col-sm-15 {
        width: 20% !important;
        float: left;
    }
}
@media (min-width: 992px) {
    div.pyramid.col-md-15 {
        width: 20% !important;
        float: left;
    }
}
@media (min-width: 1200px) {
    div.pyramid.col-lg-15 {
        width: 20% !important;
        float: left;
    }
}

.feature-image, .plot-image {
  margin-left: auto;
  margin-right: auto;
}

.plot-image {
  margin-top: 40px;
  margin-bottom: 40px;
}

.feature-image {
  margin-top: 90px;
  margin-bottom: 40px;
}


.photo-credits {
  width: 100%;
  text-align: right;
  display: block;
  font-style: italic;
  margin-top: -40px;
}

.jump-to-map {
  color : #0096D2;
  cursor: pointer;
}

.jump-to-map:hover {
  color : #0096D2;
}


.quote {
  font-size: 25px;
  font-weight: 300;
  width: 100%;
  text-align: center;
  margin: 15px 0 20px 0;
}

.quote-wrapper {
  display: block;
  margin-bottom: 30px;
}

.row.padded-row {
  padding-bottom: 30px;
}

.hr-wrapper {
  width: 100%;
  text-align: center;
}

.orange-hr {
  width: 20%;
  display: inline-block;
  border: 1.5px solid #0096d2;
  margin : 10px;
}

.read-more {
  cursor: pointer;
}

#map-more-text {
  display: none;
}

.item-container {
  background-color: #fff;
}

.item {
  padding-top:100px;
}


#map-tool-container, #feature-top-row {
  border-top: 8px solid #000;
}

#param-table {
  margin-bottom: 10px;
}

#pyramids {
  margin-top: 20px;
}

.navbar {
  background-color: #000;
  border-bottom: none;
}

.right-align {
  float: right;
  text-align: right;
}

.dropdown-menu {
  min-width: 0px;
}

.dropdown-menu li {
  font-size: 12px;
  cursor: pointer;
}

.margin-group {
  padding: 0px;
  padding-right: 15px;
}

.color-label {
  color: #000;
  font-size: 18px;
  padding-top:20px;
}

#copyright {
  width: 100%;
  text-align: center;
  margin-top: 20px;
  font-size: 12px;
}




/*---------------------------------------
  --------------------------------------*/



/*---------------------------------------
  ---------------------------------------
    Header Image transition
  ---------------------------------------
  --------------------------------------- */

#crossfade {
  display: block;
  width: 100%;
  height: 350px;
  overflow: hidden;
  position: absolute;
  top: 0px;
  left: 0px;
}

 #crossfade > img {
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 0;
}

/*---------------------------------------
  ---------------------------------------
    Adrienne Bootstrap Overrides & New
  ---------------------------------------
  --------------------------------------- */

#feature-container .img-rounded{
    border-radius: 0px;
}

h1{
    margin-top: 50px;
}

.well col-sm-12{
    background-color: none;
    padding:20px 0;
    border: none;
}

#map-top{
    margin-top:30px;
}

. col-sm12 .legend{
    margin-top:20px;
}

.settings-header-legend {
  font-weight: regular;
  font-size: 20px;
  margin-top: 10px;
}

.hr-legend{
    margin: 20px 15px;
}

.well col-sm-12 #detail-well{
    border: 0px;
}

div .well {
  border-radius: 0px;
  border : none;
}

